<resources>
    <string name="app_name">DocT</string>
    <string name="chat_with_your_personal_doctor_and_cure_yourself">Chat with your personal doctor and cure yourself</string>
    <string name="already_account_in_registration">Already Account ?</string>
    <string name="signup_in_login">Sign up</string>
    <string name="email_confirm_password_hint_in_registration">Confirm Password</string>
    <string name="email_password_in_login">Password</string>
    <string name="create_account_in_registration">Create Account</string>
    <string name="email_address_in_login">Email Address</string>
    <string name="name_hint_in_registration">Name</string>
    <string name="signin_in_login">Sign in</string>
    <string name="welcome_in_login">Welcome</string>
    <string name="signin_in_registration">Sign in</string>
    <string name="signup_in_registration">Sign up</string>
    <string name="im_new_user_in_login">Im new user !</string>
    <string name="email_password_hint_in_registration">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="email_address_hint_in_registration">Email Address</string>

    <!--<string name="app_name">DocT</string>-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to DocT</string>
    <string name="slide_1_desc"></string>

    <string name="slide_2_title"></string>
    <string name="slide_2_desc">The best option to consult a doctor through Online Consultation</string>

    <string name="slide_3_title"></string>
    <string name="slide_3_desc">Choose the doctor that you want with our very own consultation app</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_maps6">MapsActivity_6</string>
</resources>