<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationOrSignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_in_registration"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_25sdp"
            android:fontFamily="@font/spartan_bold"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/female_doctor_avatar"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@null"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/name_hint_in_registration"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@null"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/email_address_hint_in_registration"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#757575"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:autofillHints=""
            android:background="@null"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/email_password_hint_in_registration"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/reg_cPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:autofillHints=""
            android:background="@null"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/email_confirm_password_hint_in_registration"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/signup_in_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/spartan_regular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_regular"
            android:text="@string/already_account_in_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/txt_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_regular"
            android:text="@string/signin_in_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"/>

    </LinearLayout>



</RelativeLayout>