<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignupActivity_3">

    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="@dimen/_52sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="5dp"
        android:src="@drawable/general_back_button" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:gravity="center"
            android:text="@string/create_account_in_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_35sdp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/female_doctor_avatar"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/person_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartan_regular"
                android:background="@color/white"
                android:hint="@string/name_hint_in_registration"
                android:textColor="@color/black"
                android:textColorHint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartan_regular"
                android:hint="@string/email_address_in_login"
                android:background="@color/white"

                android:textColor="@color/black"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/lock_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartan_regular"
                android:hint="@string/email_password_hint_in_registration"
                android:inputType="textPassword"
                android:background="@color/white"

                android:textColor="@color/black"
                android:textColorHint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/lock_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_cPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/spartan_regular"
                android:hint="@string/email_confirm_password_hint_in_registration"
                android:background="@color/white"

                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shapelogin"
            android:text="@string/signup_in_registration" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_regular"
            android:text="@string/already_account_in_registration"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/txt_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_regular"
            android:text="@string/signin_in_registration"
            android:layout_marginBottom="@dimen/_11sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"/>

    </LinearLayout>



</RelativeLayout>