<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".LoginActivity_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="52dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:src="@drawable/general_back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="LOGIN"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="55sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/person_icon"
                android:background="@color/white"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/spartan_regular"
                    android:hint="@string/email_address_in_login"

                    android:textColor="@color/black"
                    android:textColorHint="#757575"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                android:background="@color/white"
                app:startIconDrawable="@drawable/lock_icon"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/spartan_regular"
                    android:hint="@string/email_password_in_login"

                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"

                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <CheckBox
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:id="@+id/checkboxRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/black"
                android:text="@string/remember_me"
                android:textColor="@color/black" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="#00000000"
                android:text="@string/forget_password"
                android:textColor="@color/black" />

        </RelativeLayout>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_in_login"
            android:background="@drawable/shapelogin"
            android:layout_marginTop="30dp"/>
        <Button
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="#00000000"
            android:text="@string/create_account_in_registration"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>


</ScrollView>